# ryob

./: Cargo.toml  README.md
docs/: templates.md
migrations/2019-07-15-180736_initial/: up.sql
migrations/2019-10-11-141301_create_topics_and_posts/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/controllers/: index.rs  mod.rs  register.rs
src/controllers/users/: login.rs  mod.rs  register.rs
src/database/: mod.rs
src/models/: mod.rs  post.rs  topic.rs  user.rs
src/services/: post.rs  topic.rs  user.rs
src/utils/: errors.rs  id.rs
static/styles/: main.css  reset.css
static/templates/: banner.html  menu.html  register.html  wrapper.html
static/templates/pages/: index.html  login.html  register.html
static/templates/partials/: banner.html  footer.html  header.html
static/templates/partials/forms/: login.html  register.html
static/templates/partials/menus/: logged_in.html  logged_out.html
