[package]
name = "ryob"
version = "0.1.0"
authors = ["Pro Target <professionaltarget@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-session = "0.2.0"
actix-files = "0.1.3"
diesel = { version = "1.4.0", features = ["postgres", "r2d2", "chrono"] }
serde = "1.0.94"
serde_json = "1.0.40"
bcrypt = "0.1.5"
rand = "0.7.0"
r2d2 = "0.8.5"
log = "0.4.8"
handlebars = "2.0.0-beta.2"
chrono = { version = "0.4.9", features = ["serde"] }
env_logger = "0.7.0"